# llm-as-a-judge

./: .gitignore  README.md  cheatsheet.md  pyproject.toml  requirements.txt
archive/datasets/lesson_1/: direct_scoring_problems.json  pairwise_comparison_flaws.json  subjective_questions.json  true_false_edge_cases.json
archive/datasets/lesson_2/: step1_structured_prompts.json  step2_decomposed_evaluation.json  step3_chain_of_thought.json  step4_reference_aware.json  step5_pairwise_comparison.json  step6_multi_judge_ensemble.json  step7_adversarial_evaluation.json  step8_calibrated_scoring.json
archive/notebooks/: final_challenge.ipynb  session_2_progressive_improvements.ipynb  session_3_solving_problems_best_practices.ipynb
datasets/: eval_test_cases.json  fact_checking_dataset.json  hallucination_cases.json  human_baseline.json  listwise_cases.json  multi_turn_cases.json  pairwise_cases.json  qa_quality_dataset.json  reasoning_problems_dataset.json
notebooks/: workshop.ipynb
src/: __init__.py  prompts.py
