[project]
name = "llm-as-a-judge"
version = "0.1.0"
description = "From Prompt to Verdict: a 2-hour build-along bootcamp covering 46 LLM-as-a-Judge techniques, from structured evaluation to multi-judge ensembles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "litellm>=1.81.10",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
]
